Fix hamburger expanded issues re responsiveness *Stop horizontal scroll on mobile by adding flex-wrap *Make menu alignment right on tablet

--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -188,9 +188,11 @@ p {
 /* Media Queries */
 
 @media (min-width: 320px) and (max-width: 480px) {
+
   .description {
     margin-top: 1em;
   } 
+
   .social-icons-row {
     width: 60px;
     height: 50px;
@@ -203,12 +205,17 @@ p {
   .sub-header {
     font-size: 1em;
   }
+
+  .menu {
+    max-width: 100%;
+  }
+
 }
 
 @media (min-width: 768px) and (max-width: 1024px) {
   
   .menu {
-  margin-left: 30%;
+  margin-left: %;
 }
 }
 
